# Rust-Project

data_scraping/: Cargo.toml  Readme.md  default.csv  default.json  new.csv  offers-1000.csv  organizations-100 copy.csv  organizations-100.csv  output.json  people-100.csv  scraping.csv  sorted.csv  sorted.json  sorted_vac.csv  sorted_vac2.csv  test.csv  test_output.csv  vaccination-data.csv
data_scraping/src/: csv_to_jason.rs  lib.rs  main.rs  scraping_table.rs
data_scraping/src/utilities/: csv_to_jason.rs
