[package]
name = "data_scraping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2"
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.13.0"
rayon = "1.8.0"
clap = "4.4.6"

[dev-dependencies]
